# SynodOSS-Multi-Agent-Open-Source-Fork-Reconciliation-Platform

./: .gitignore  LICENSE  README.md  docker-compose.yml  test.py
backend/: debug_debate.py  debug_start.py  fix_db.py  main.py  pyproject.toml  test_debate.py
backend/alembic/: env.py
backend/alembic/versions/: 3b0260368a71_initial_migration.py  4b3645503a6d_add_debate_messages.py  65513c872d31_add_reconciliation_unit_fields.py  8c4523d340aa_phase3_verification_tables.py  a1c9f3e82b40_add_resolution_action_and_escalated_status.py  b7ee7cc1d052_phase2_debate_tables.py  fc73863a71f5_add_debate_metrics.py
backend/scripts/: create_demo_dataset.py  generate_proof.py
backend/src/agents/: architect_reviewer.py  base_agent.py  enterprise_defender.py  impact_analyst.py  upstream_advocate.py  verification_judge.py
backend/src/api/: routes.py
backend/src/core/: config.py  database.py  llm_provider.py  token_budget.py
backend/src/models/: schema.py
backend/src/orchestration/: agent_manager.py  consensus_manager.py  context_builder.py  debate_manager.py
backend/src/services/: adr_generator.py  architecture_analyzer.py  conflict_detection_service.py  context_compression_service.py  diff_analysis_service.py  evidence_resolver.py  file_summary_service.py  graph_builder_service.py  impact_analyzer_service.py  knowledge_invalidation_service.py  knowledge_store.py  patch_generator.py  persistence_service.py  pr_generator.py  reconciliation_engine.py  repository_service.py  retrieval_orchestrator_service.py  (+1 more)
backend/tests/: test_conflict_detection.py
(+50 files in other folders)
