[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "celery>=5.6.3",
    "fastapi>=0.136.3",
    "gitpython>=3.1.50",
    "groq>=1.4.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "redis>=8.0.0",
    "ruff>=0.15.16",
    "sqlalchemy>=2.0.50",
    "structlog>=26.1.0",
    "uvicorn>=0.49.0",
]
